--- a/profiles/soar/libraries/backbone/package.json
+++ b/profiles/soar/libraries/backbone/package.json
@@ -5,24 +5,28 @@
   "keywords"      : ["model", "view", "controller", "router", "server", "client", "browser"],
   "author"        : "Jeremy Ashkenas <jeremy@documentcloud.org>",
   "dependencies"  : {
-    "underscore"  : ">=1.4.3"
+    "underscore"  : ">=1.6.0"
   },
   "devDependencies": {
-    "phantomjs": "1.9.0-1",
-    "docco": "0.6.1",
-    "coffee-script": "1.6.1"
+    "phantomjs": "1.9.7-8",
+    "docco": "0.6.3",
+    "coffee-script": "1.7.1"
   },
+  "main": "backbone.js",
   "scripts": {
     "test": "phantomjs test/vendor/runner.js test/index.html?noglobals=true && coffee test/model.coffee",
     "build": "uglifyjs backbone.js --mangle --source-map backbone-min.map -o backbone-min.js",
-    "doc": "docco backbone.js && docco examples/todos/todos.js examples/backbone.localstorage.js",
+    "doc": "docco backbone.js && docco examples/todos/todos.js examples/backbone.localStorage.js",
     "lint": "jsl -nofilelisting -nologo -conf docs/jsl.conf -process backbone.js"
   },
   "main"          : "backbone.js",
-  "version"       : "1.1.0",
+  "version"       : "1.1.2",
   "license"       : "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/jashkenas/backbone.git"
-  }
+  },
+  "files": [
+    "backbone.js", "backbone-min.js", "backbone-min.map", "LICENSE"
+  ]
 }
