--- a/profiles/soar/themes/custom/soar_base/package.json
+++ b/profiles/soar/themes/custom/soar_base/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soar_base",
+  "name": "advocate",
   "version": "0.0.1",
   "devDependencies": {
     "load-grunt-tasks": "~0.6.0",
@@ -11,7 +11,8 @@
     "grunt-newer": "~0.7.0",
     "grunt-stripmq": "git://github.com/aschmoe/grunt-stripmq.git",
     "grunt-sass": "0.16.0",
-    "grunt-contrib-uglify": "~0.5.1"
+    "grunt-contrib-uglify": "~0.5.1",
+    "grunt-contrib-concat": "~0.5.0"
   },
   "engines": {
     "node": ">=0.8.0"
