--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ sites/*/settings*.php
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
+
+# Apps folder
+
+soar_apps
