adding js path to bower

--- a/sites/all/libraries/angular-media-app/bower.json
+++ b/sites/all/libraries/angular-media-app/bower.json
@@ -23,5 +23,10 @@
   },
   "resolutions": {
     "angular": "~1.x"
+  },
+  "overrides": {
+    "jcrop": {
+      "main": "js/jquery.Jcrop.js"
+    }
   }
 }
