--- a/profiles/helm/themes/contrib/minimalist_admin/package.json
+++ b/profiles/helm/themes/contrib/minimalist_admin/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "soar_admin",
+  "name": "dcpl_v2",
   "version": "0.0.1",
   "devDependencies": {
     "load-grunt-tasks": "~0.6.0",
     "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-cssmin": "~0.10.0",
-    "grunt-contrib-imagemin": "~0.7.1",
+    "grunt-contrib-imagemin": "0.8.0",
     "grunt-newer": "~0.7.0",
     "grunt-stripmq": "git://github.com/aschmoe/grunt-stripmq.git",
-    "grunt-sass": "0.16.0",
-    "grunt-contrib-uglify": "~0.5.1",
-    "grunt-contrib-concat": "~0.5.0"
+    "grunt-node-inspector": "~0.1.5",
+    "grunt-sass": "~0.16.0",
+    "grunt-contrib-coffee": "~0.11.1",
+    "coffeelint": "~1.5.6",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-uglify": "~0.5.1"
   },
   "engines": {
     "node": ">=0.8.0"
